samples/_failures_safe/1761530644_2bd3ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ce9fac7.c: In function ‘main’:
./samples/SAFE/__tmp_9ce9fac7.c:146:9: error: ‘de’ undeclared (first use in this function)
  146 |     if (de
      |         ^~
./samples/SAFE/__tmp_9ce9fac7.c:146:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9ce9fac7.c:146:11: error: expected ‘)’ at end of input
  146 |     if (de
      |        ~  ^
      |           )
./samples/SAFE/__tmp_9ce9fac7.c:146:5: error: expected declaration or statement at end of input
  146 |     if (de
      |     ^~
